force-app/main/default/objects/Ownership_Event__c/Ownership_Event__c.object-meta.xml
<CustomObject>
    <label>Ownership Event</label>
    <nameField>
        <displayFormat>OWN-{00000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ownership Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>