force-app/main/default/objects/Ownership_Event__c/fields/Condition_At_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Condition_At_Transfer__c</fullName>
    <label>Condition at Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Mint</fullName><default>false</default><label
        >Mint</label></value>
            <value><fullName>Good</fullName><default>true</default><label
        >Good</label></value>
            <value><fullName>Fair</fullName><default>false</default><label
        >Fair</label></value>
            <value><fullName>Poor</fullName><default>false</default><label
        >Poor</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>