force-app/main/default/objects/Ownership_Event__c/fields/From_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>From_Owner_Name__c</fullName>
    <label>From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>