force-app/main/default/objects/Ownership_Event__c/fields/Passport__c.field-meta.xml
<CustomField>
    <fullName>Passport__c</fullName>
    <label>Passport</label>
    <referenceTo>Digital_Passport__c</referenceTo>
    <relationshipLabel>Ownership Events</relationshipLabel>
    <relationshipName>Ownership_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>