force-app/main/default/objects/Ownership_Event__c/fields/Swap_Request__c.field-meta.xml
<CustomField>
    <fullName>Swap_Request__c</fullName>
    <label>Swap Request</label>
    <referenceTo>Swap_Request__c</referenceTo>
    <relationshipLabel>Ownership Events</relationshipLabel>
    <relationshipName>Ownership_Events</relationshipName>
    <type>Lookup</type>
</CustomField>