force-app/main/default/objects/Ownership_Event__c/fields/To_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>To_Owner_Name__c</fullName>
    <label>To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>