force-app/main/default/objects/Ownership_Event__c/fields/Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Type__c</fullName>
    <label>Transfer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Purchase</fullName><default>true</default><label
        >Purchase</label></value>
            <value><fullName>Swap</fullName><default>false</default><label
        >Swap</label></value>
            <value><fullName>Gift</fullName><default>false</default><label
        >Gift</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>